Problem 3 - Largest Prime Factor.ipynb: largest_prime_factor3(): Fixed recursion bug.
Added other ways of factoring numbers.

--- a/Problem 3 - Largest Prime Factor.ipynb
+++ b/Problem 3 - Largest Prime Factor.ipynb
@@ -2,14 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Problem 3 - Largest Prime Factor"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The prime factors of 13195 are 5, 7, 13 and 29.\n",
     "\n",
@@ -18,14 +24,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Search from half the number down"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is too slow.\n",
     "Hits maximum recursion depth with large numbers"
@@ -35,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 239,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -53,7 +67,11 @@
   {
    "cell_type": "code",
    "execution_count": 240,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -70,7 +88,11 @@
   {
    "cell_type": "code",
    "execution_count": 241,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -87,7 +109,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "## Caching largest_factors"
@@ -95,7 +119,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "This is faster, but still too slow"
    ]
@@ -104,7 +131,9 @@
    "cell_type": "code",
    "execution_count": 242,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -126,7 +155,11 @@
   {
    "cell_type": "code",
    "execution_count": 243,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -144,7 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,20 +197,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Searching the space differently"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 256,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "def largest_prime_factor3(number = 0, numbers_to_largest_factor = {}):\n",
@@ -197,7 +244,11 @@
   {
    "cell_type": "code",
    "execution_count": 257,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "ename": "RecursionError",
@@ -228,7 +279,11 @@
   {
    "cell_type": "code",
    "execution_count": 255,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "ename": "RecursionError",
@@ -251,12 +306,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def largest_prime_factor3(number, numbers_to_largest_factor={}):\n",
+    "    square_root = int(math.sqrt(number))\n",
+    "    ascending = range(2, square_root + 1)\n",
+    "    descending = reversed(range(square_root + 1))\n",
+    "    ranges = (ascending, descending)\n",
+    "    for index, r in enumerate(ranges):\n",
+    "        for potential_factor in r:\n",
+    "            if index == 1 and potential_factor <= 1:\n",
+    "                return 1\n",
+    "            if number % potential_factor == 0:\n",
+    "                if index == 0: # true\n",
+    "                    potential_factor = number // potential_factor\n",
+    "                if potential_factor not in numbers_to_largest_factor:\n",
+    "                    numbers_to_largest_factor[potential_factor] = largest_prime_factor3(potential_factor, numbers_to_largest_factor)\n",
+    "                if numbers_to_largest_factor[potential_factor] == 1:\n",
+    "                    return potential_factor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 7.05 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1000 loops, best of 3: 406 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 1000000\n",
+    "%timeit largest_prime_factor3(n)\n",
+    "largest_prime_factor3(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 7.89 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "100000 loops, best of 3: 9.43 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3222\n",
+    "%timeit largest_prime_factor3(n)\n",
+    "largest_prime_factor3(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def prime_factors(x):\n",
+    "    factors = []\n",
+    "    divisor = 2\n",
+    "    while divisor < x:\n",
+    "        if x % divisor == 0:\n",
+    "            factors.append(divisor)\n",
+    "            x //= divisor\n",
+    "        else:\n",
+    "            divisor += 1\n",
+    "    if x > 1:\n",
+    "        factors.append(x)\n",
+    "    return factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000 loops, best of 3: 4.93 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 2, 2, 2, 2, 5, 5, 5, 5, 5, 5]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 1000000\n",
+    "%timeit prime_factors(n)\n",
+    "prime_factors(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 33.1 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 3, 179]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3222\n",
+    "%timeit prime_factors(n)\n",
+    "prime_factors(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def prime_factors(x):\n",
+    "    factors = Counter()\n",
+    "    divisor = 2\n",
+    "    while divisor < x:\n",
+    "        if x % divisor == 0:\n",
+    "            factors[divisor] += 1\n",
+    "            x //= divisor\n",
+    "        else:\n",
+    "            divisor += 1\n",
+    "    if x > 1:\n",
+    "        factors[x] += 1\n",
+    "    return factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 19.2 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 6, 5: 6})"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 1000000\n",
+    "%timeit prime_factors(n)\n",
+    "prime_factors(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000 loops, best of 3: 43.6 µs per loop\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Counter({2: 1, 3: 2, 179: 1})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3222\n",
+    "%timeit prime_factors(n)\n",
+    "prime_factors(n)"
+   ]
   }
  ],
  "metadata": {
@@ -275,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
