Problem 3 - Largest Prime Factor.ipynb: Delete comment.

--- a/Problem 3 - Largest Prime Factor.ipynb
+++ b/Problem 3 - Largest Prime Factor.ipynb
@@ -308,7 +308,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -335,7 +337,7 @@
     "            if index == 1 and potential_factor <= 1:\n",
     "                return 1\n",
     "            if number % potential_factor == 0:\n",
-    "                if index == 0: # true\n",
+    "                if index == 0:\n",
     "                    potential_factor = number // potential_factor\n",
     "                if potential_factor not in numbers_to_largest_factor:\n",
     "                    numbers_to_largest_factor[potential_factor] = largest_prime_factor3(potential_factor, numbers_to_largest_factor)\n",
